fix wrong tab & add spacing elements

--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -1,12 +1,4 @@
 // //Navigation styles
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
 .navbar {
     width: 100%;
     height: 60px;
@@ -16,7 +8,6 @@ li {
 }
 
 .menu {
-    // width: 60%;
     height: 100%;
     float: left;
 
@@ -49,25 +40,38 @@ li {
         display: flex;
 
         /* NEW, Spec - Opera 12.1, Firefox 20+ */
-        a {
+        li {
             width: fit-content;
             height: inherit;
             display: inline-block;
-            margin-right: 30px;
-            margin-left: 7px;
+            // margin-right: 30px;
+            // margin-left: 7px;
             color: $colorTextSecondary;
             font-size: $sizeTextNav;
-            border-radius: 3px;
 
-            i {
-                font-size: $sizeIcon;
-                color: $colorIcon;
+            a {
+                text-decoration: none;
+
+                i {
+                    font-size: $sizeIcon;
+                    color: $colorIcon;
+                }
+
+                i+span{
+                    margin-left: 3px;
+                }
             }
 
             &:hover {
                 background: #a2a8ab;
                 transition: 0.5s;
+                border-radius: 5px;
             }
+
+        }
+
+        li+li {
+            margin-right: 25px;
         }
     }
 
@@ -99,7 +103,7 @@ li {
             -o-transition: max-height 0.3s;
             transition: max-height 0.3s;
 
-            a {
+            li {
                 text-align: left;
                 width: 100%;
                 height: 50px;
